crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-6.0__django__templatetags__cache.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-6.0/django/templatetags/cache.py
---
tag_rules:
  "django.templatetags.cache::tag::cache":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
filter_arities: {}
block_specs:
  "django.templatetags.cache::tag::cache":
    end_tag: endcache
    intermediates: []
    opaque: false
