crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-6.0__django__templatetags__static.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-6.0/django/templatetags/static.py
---
tag_rules: {}
filter_arities: {}
block_specs: {}
