crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-6.0__django__templatetags__tz.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-6.0/django/templatetags/tz.py
---
tag_rules:
  "django.templatetags.tz::tag::get_current_timezone":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: as
        required: true
        kind:
          Literal: as
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
  "django.templatetags.tz::tag::localtime":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints:
      - position:
          Forward: 1
        values:
          - "on"
          - "off"
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "django.templatetags.tz::tag::timezone":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities:
  "django.templatetags.tz::filter::localtime":
    expects_arg: false
    arg_optional: false
  "django.templatetags.tz::filter::timezone":
    expects_arg: true
    arg_optional: false
  "django.templatetags.tz::filter::utc":
    expects_arg: false
    arg_optional: false
block_specs:
  "django.templatetags.tz::tag::localtime":
    end_tag: endlocaltime
    intermediates: []
    opaque: false
  "django.templatetags.tz::tag::timezone":
    end_tag: endtimezone
    intermediates: []
    opaque: false
